# LightGet

./: .gitignore  README.md
.github/workflows/: release.yml
SnapEdit/: Annotation.swift  AppDelegate.swift  AppIcon.icns  HotKey.swift  Info.plist  Localization.swift  OverlayController.swift  OverlayView.swift  ScreenCapture.swift  Settings.swift  SettingsWindowController.swift  ToolbarView.swift  main.swift
SnapEdit.xcodeproj/: project.pbxproj
cross-platform/: CMakeLists.txt  DESIGN.md  README.md
cross-platform/packaging/linux/: lightget.desktop
cross-platform/packaging/windows/: LightGet.iss
cross-platform/resources/: AppIcon.icns  Info.plist.in  app.rc  assets.qrc  gen_icons.cpp
cross-platform/src/: Annotation.h  GlobalHotkey.cpp  GlobalHotkey.h  Localization.cpp  Localization.h  OverlayWindow.cpp  OverlayWindow.h  ScreenCapture.cpp  ScreenCapture.h  Settings.cpp  Settings.h  SettingsWindow.cpp  SettingsWindow.h  Toolbar.cpp  Toolbar.h  TrayApp.cpp  TrayApp.h  WaylandPortal.cpp  main.cpp
cross-platform/src/mac/: MacNative.mm
